# Math

./: CMakeLists.txt  README.md
lib/: common.h  log.h  log_common.h  primes_decision.h
src/: finder.c  function.c  log.c  log_file_function.c  log_pipe_function.c  log_pipe_function.cpp  main.c  server.c
src/Gauss/: GaussianElimination.c
src/numbers/: finder.c  log.c  log_file_function.c  log_pipe_function.c  main.c  server.c
tests/: log_test.cpp
tests/numbers/: log_test.cpp
